fix: resolve acceptance test issues (P0 and P1)
P0 fixes (blocking):
- Fix Maven compile: configure permission-bootstrap spring-boot-maven-plugin
- Fix open redirect vulnerability: add isSafeRedirectUrl/safeRedirect validation
- Fix Redis exception handling: add fallback to DB in SessionValidatorImpl

P1 fixes:
- Implement requiredPermissionPrefix check in ProtectedRoute
- Set SameSite cookie attribute via Set-Cookie header
- Make security scans block CI (remove continue-on-error, set exit-code to 1)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>